fix spacing at the bottom of the page

--- a/demo/style.css
+++ b/demo/style.css
@@ -1,7 +1,7 @@
 /* common */
 
 body {
-	padding:0em 3em 4.5em 3em;
+	padding:0em 3em 1.5em 3em;
 	font:100%/1.5 Arial, sans-serif;
 }
 
